[package]
name = "cryptography-rust"
version = "0.1.0"
authors = ["The cryptography developers <cryptography-dev@python.org>"]
edition = "2018"
publish = false

[dependencies]
pyo3 = { version = "0.13.0", features = ["extension-module"] }
asn1 = { git = "https://github.com/alex/rust-asn1" }

[lib]
name = "cryptography_rust"
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
